<resources>
    <string name="action_settings">Settings</string>
    <string name="action_toword">Word</string>
    <string name="action_toimage">Image</string>
    <string name="str_wordFrag">WORD FRAGMENT</string>
    <string name="str_pixelFrag">PIXEL FRAGMENT</string>
    <string name="app_name">ImagePixel</string>
    <string name="btn_pixelate">Pixel</string>
    <string name="label_pixelate">PIXELATION</string>
    <string name="btn_load">Pick Image</string>
    <string name="btn_send">Send</string>
    <string name="btn_bluetooth">Connect</string>
    <string name="text_paired">Paired Devices</string>
    <string name="btn_paired">Paired Devices</string>
    <string name="btn_tomain">To Main</string>
    <string name="btn_word">Word</string>
    <string name="title_activity_send_word">SendWord</string>
    <string name="btn_color">Colour</string>
    <string name="str_TEXT">TEXT</string>
    <string name="str_COLOUR">COLOUR</string>
    <string name="str_REPETITIONS">REPETITIONS</string>
    <string name="str_SPEED">SPEED</string>
    <string name="action_bluetooth">Connect</string>
</resources>
