<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#dddddd">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="50sp"
        android:text="@string/label_pixelate"
        android:textColor="#424242"
        android:layout_gravity="center_horizontal|top"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:layout_gravity="center_vertical"
        android:scaleType="fitXY"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:text="@string/btn_send"
        android:id="@+id/btn_send"
        android:textSize="30sp"
        android:textColor="#424242"

        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btn_bluetooth"
        android:layout_alignEnd="@+id/btn_bluetooth"
        android:layout_alignLeft="@+id/btn_bluetooth"
        android:layout_alignStart="@+id/btn_bluetooth"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:elevation="0dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:text="@string/btn_pixelate"
        android:id="@+id/btn_pixel"
        android:textSize="30sp"
        android:textColor="#424242"

        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btn_load"
        android:layout_alignEnd="@+id/btn_load"
        android:textStyle="bold"
        android:elevation="0dp"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:text="@string/btn_bluetooth"
        android:id="@+id/btn_bluetooth"
        android:textSize="30sp"
        android:layout_height="85dp"
        android:textColor="#424242"
        android:layout_alignTop="@+id/btn_load"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:elevation="0dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:text="@string/btn_load"
        android:id="@+id/btn_load"
        android:textSize="30sp"
        android:textColor="#424242"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:elevation="0dp"
        android:layout_above="@+id/btn_pixel"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:text="@string/btn_word"
        android:id="@+id/btn_word"
        android:layout_alignLeft="@+id/btn_bluetooth"
        android:layout_alignStart="@+id/btn_bluetooth"
        android:layout_above="@+id/btn_bluetooth"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#424242"
        android:elevation="0dp"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView" />

</RelativeLayout>