<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PixelFragment"
    android:background="#e1e1e1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mainWord"
                android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_TEXT"
                android:textSize="90sp"
                android:textStyle="bold"
                android:textColor="#21000000"
                android:layout_centerHorizontal="true"
                android:id="@+id/textTEXT"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekSpeed"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_SPEED"
                android:textColor="#21000000"
                android:textSize="90sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:id="@+id/textSPEED"
                android:layout_marginTop="50dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textSpeed"
                android:text="0"
                android:textSize="175sp"
                android:textStyle="bold"
                android:textColor="#21000000"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:id="@+id/btn_Color"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:alpha="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_COLOUR"
                android:textSize="90sp"
                android:textStyle="bold"
                android:textColor="#21000000"
                android:id="@+id/textCOLOUR"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_send"
            android:id="@+id/btn_sendWord"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="35sp" />
    </LinearLayout>
</RelativeLayout>
